--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 /*GLOBAL*/
+:root {
+    --dark-blue-color:rgb(21, 45, 66);
+    --light-blue-color:rgb(167, 209, 246);
+    --purple-blue-color:rgb(197, 205, 255);
+    --white-blue-color:rgb(235, 251, 254);
+    }
 
 html{
     scroll-behavior: smooth;
@@ -6,33 +12,45 @@ html{
 }
 
 /* laptop layout*/
-nav a:link {color: rgb(9, 26, 73);}
-nav a:hover{color: rgb(21, 58, 159);}
-nav a:visited{color:rgb(45, 62, 111);}
 
+nav a:link {color: var(--dark-blue-color);}
+nav a:hover{color:darkslategrey;}
+nav a:visited{color:rgb(15, 27, 63);}
+
+h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 55px;
+    padding-left: 25px;
+    color: var(--dark-blue-color);
+}
 
 header{
     display: flex;
-    background-color: rgb(172, 243, 228);
+    background-color: var(--white-blue-color);
     justify-content:space-between;
     position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 30;
     height: 10vh;
+    padding-bottom: 15px;
 }
 
-.header-section a img{
-    height: 4.6875rem;
+
+.logo{
+    width: 100px;
+    padding-left: 25px;
+    padding-top: 25px;
+    margin: 0;
 }
 
-nav {   
+nav {  
     box-sizing: border-box;
     text-align: center;
     padding-right: .9375rem;
     z-index: 30;
-    height: 10vh;     
+    height: 10vh;    
 }
 
 nav ul {padding: 0px;}
@@ -40,7 +58,333 @@ nav ul {padding: 0px;}
 nav li{
     display:inline-flex;
     padding-left: .3125rem;
-    padding-right: .3125rem;
-    border-left: .1875rem  rgb(243, 16, 239) solid;
+    padding-right: 25px;
     margin: 0;   
+}
+
+.side-menu{ 
+    display: none;
+}
+
+.openslide{
+    display: none;
+}
+
+.hero
+{    
+  max-height: none;
+  min-height: 550px;
+  -webkit-text-fill-color: inherit;
+  object-fit: contain;
+  background-image: url('../images/herobg.png');
+  background-position: 50%;
+  background-repeat: repeat;
+  background-size: cover;
+  background-clip: border-box;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  display: flex;
+  position: static;
+  bottom: auto;
+  margin-top: 40px;
+}
+
+.hero h1{
+    color: var(--light-blue-color);
+    font-size: 135px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 0;
+}
+
+.hero p{
+    color: var(--light-blue-color);
+    font-size: 35px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 0;
+}
+
+.intro{
+    color: var(--purple-blue-color);
+    background-color: var(--dark-blue-color);
+    text-align: left;
+    padding: 25px;
+}
+
+.intro h2{
+    color: var(--purple-blue-color);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 0;
+}
+
+.gallery{
+    background-color: var(--dark-blue-color);
+    padding: 25px;
+}
+
+
+.gal-img{
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  margin-top: 0;
+  padding-top: 0;
+  padding-bottom: 50px;
+  display: grid;
+}
+
+
+.gal-img img{
+    height: 350px;
+}
+
+.blog{
+    background-color: var(--white-blue-color);
+    color: var(--dark-blue-color);
+    padding: 35px;
+    text-align: center;
+}
+
+.blog-img{
+    align-content: center;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap:20px;
+}
+
+.blog img{
+    width:500px;
+}
+
+footer {
+    color: var(--light-blue-color);
+    background-color: var(--dark-blue-color);
+    justify-content: center;
+    padding-top: 10px;
+    padding-left: 0;
+    display:flex;
+}
+
+.button{
+  color: var(--dark-blue-color);
+  text-align: center;
+  background-color: var(--purple-blue-color);
+  border: 1px solid var(--light-blue-color);
+  border-radius: 8px;
+  padding: 15px;
+  margin: 25px;
+}
+
+.info{
+    display: flex;
+    flex-direction:row;
+    padding: 25px; 
+}
+
+.info img{
+    width: 500px;
+}
+.info p{
+    color:  var(--dark-blue-color);
+    text-align: justify;
+    font-size: 25px;
+    padding: 25px;
+    margin: 0;
+}
+.about {
+    background-color: var(--purple-blue-color);
+}
+.about h2{
+    margin: 0;
+    padding-bottom: 0;
+    padding-top: 75px;
+}
+
+.products{
+    display: grid;
+    grid-template-columns:  1fr 1fr;
+}
+
+.glasses{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--dark-blue-color);
+    padding: 25px;
+    background-color: var(--light-blue-color);
+    margin: 25px;
+}
+
+.glasses img{
+    width: 300px;
+}
+
+/* tablet layout*/
+
+@media all and (max-width:80rem) {
+  
+    h1, h2 { 
+        font-size: 1.5625rem;
+    }
+
+    header{
+        height: 8vh; 
+   }
+   .logo{
+    margin: 0;
+    padding: 10px;
+    width: 85px;
+   }
+
+    .hero {    
+        min-height: 400px;
+        margin-top: 20px;
+    }
+
+
+    .hero h1{
+        font-size: 80px;   
+    }
+    
+    .intro{
+        padding: 25px;
+    }
+    
+    
+    .gal-img{
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-auto-columns: 1fr;
+        margin-top: 0;
+        padding-top: 0;
+        padding-bottom: 50px;
+        display: grid;
+    }
+    
+    
+    .gal-img img{
+        height: 300px;
+    }
+    
+    .blog img{
+        width:400px;
+    }
+    
+    .info img{
+        width: 400px;
+        height: auto;
+    }
+  
+    
+    .products{
+        display: grid;
+        grid-template-columns:  1fr 1fr;
+    }
+    
+    .glasses{
+        margin:15px
+    }
+    
+    .glasses img{
+        width: 200px;
+    }
+}
+
+/* phone layout*/
+
+@media all and (max-width:48rem) {
+    h1, h2 { 
+        font-size: 2rem;
+    }
+
+   header{
+        height: 5.8vh;
+    }
+    .logo{
+        width: 50px;
+    }
+
+    .nav{display: none;}
+
+   .openslide{
+      display: block;
+      right: 0;
+      top: 0;
+
+    }
+
+    .side-menu{
+        display: inline;
+        width: 0px;
+        height: 100%;
+        background-color:var(--light-blue-color);
+        transition: .3s all ease;
+        position: fixed;
+        top: 0;
+        right: 0;
+        overflow: hidden;
+        z-index: 50;
+        font-size: 2.1875rem;
+        padding-bottom: .625rem;
+    }
+
+
+    .hero {    
+        min-height: 300px;
+        margin-top: 20px;
+    }
+
+
+    .hero h1{
+        font-size: 50px;   
+    }
+    
+    .intro{
+        padding: 15px;
+    }
+    
+    
+    .gal-img{
+      grid-template-columns: 1fr 1fr;
+      padding-bottom: 10px;
+      display: grid;
+    }
+    
+    
+    .gal-img img{
+        height: 200px;
+    }
+    
+    .blog img{
+        width:300px;
+    }
+
+    .info{
+        display: flex;
+        flex-direction:column;
+        padding: 25px; 
+        margin: 0;
+        align-items: center;
+        
+    }
+    
+    .info img{
+        width: 200px;
+    }
+    .info p{
+        font-size: 15px;
+    }
+    
+    .products{
+        grid-template-columns:  1fr;
+    }   
+        
+        
 }
