--- a/css/style.css
+++ b/css/style.css
@@ -17,63 +17,71 @@ nav a:link {color: var(--dark-blue-color);}
 nav a:hover{color:darkslategrey;}
 nav a:visited{color:rgb(15, 27, 63);}
 
-h2{
+h1, h2, h3{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 55px;
-    padding-left: 25px;
+}
+
+h3{
+    color: var(--light-blue-color);
+}
+
+h2{
+    font-size: 3.4375em;
+    padding-left: 1.5625em;
     color: var(--dark-blue-color);
 }
 
 header{
     display: flex;
-    background-color: var(--white-blue-color);
     justify-content:space-between;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    padding-right: .625em;
     z-index: 30;
-    height: 10vh;
-    padding-bottom: 15px;
+    background-color: white;
+    width: 100%
+    /* height: 10vh; */
+    /* padding-bottom: 15px; */
 }
 
 
 .logo{
-    width: 100px;
-    padding-left: 25px;
-    padding-top: 25px;
+    width: 6.25em;
+    padding-left: 1.5625em;
+    padding-top: .625em;
     margin: 0;
 }
 
-nav {  
-    box-sizing: border-box;
-    text-align: center;
-    padding-right: .9375rem;
-    z-index: 30;
-    height: 10vh;    
+nav {
+    padding: 0.625em;
+    text-align: right;
 }
-
-nav ul {padding: 0px;}
-
-nav li{
-    display:inline-flex;
-    padding-left: .3125rem;
-    padding-right: 25px;
-    margin: 0;   
+#menu {
+    list-style-type: none;
+    display: flex;
+    justify-content: end;
+    gap: 1.25em;
 }
-
-.side-menu{ 
+#menu a {
+    text-decoration: none;
+    color: var(--light-blue-color);
+}
+#menu-toggle {
     display: none;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    border: none;
 }
-
-.openslide{
-    display: none;
+#menu.active {
+    display: flex;
 }
 
 .hero
 {    
   max-height: none;
-  min-height: 550px;
+  min-height: 34.375em;
   -webkit-text-fill-color: inherit;
   object-fit: contain;
   background-image: url('../images/herobg.png');
@@ -87,41 +95,44 @@ nav li{
   display: flex;
   position: static;
   bottom: auto;
-  margin-top: 40px;
+  margin-top: 2.5em;
 }
 
 .hero h1{
     color: var(--light-blue-color);
-    font-size: 135px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 8.4375em;
     margin-bottom: 0;
 }
 
-.hero p{
-    color: var(--light-blue-color);
-    font-size: 35px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.hero h3{
+    font-size: 2.1875em;
     margin-top: 0;
 }
+
 
 .intro{
     color: var(--purple-blue-color);
     background-color: var(--dark-blue-color);
-    text-align: left;
-    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1.5625em;
+    padding-left: 5.3125em;
+    padding-right: 5.3125em;
+    text-align: center;
 }
 
 .intro h2{
-    color: var(--purple-blue-color);
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--purple-blue-color); /* its not repetiotion, since i set the style of h2 on the top, i had to change the color here seperetly*/
     padding-left: 0;
 }
+
+
 .home-shop{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px;
+    padding: .9375em;
     background-color: var(--white-blue-color);
 }
 
@@ -133,53 +144,67 @@ nav li{
 
 .gallery{
     background-color: var(--dark-blue-color);
-    padding: 25px;
+    padding: 1.5625em;
 }
 
 
 .gal-img{
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
-  margin-top: 0;
   padding-top: 0;
-  padding-bottom: 50px;
+  padding-bottom: 3.125em;
   display: grid;
 }
 
 
 .gal-img img{
-    height: 350px;
-}
+    height: 21.875em;
+margin: auto;}
 
 .blog{
     background-color: var(--white-blue-color);
     color: var(--dark-blue-color);
-    padding: 35px;
+    padding: 2.1875em;
     text-align: center;
+    padding-left: 5.3125em;
+    padding-right: 5.3125em;
 }
 
 .blog-img{
     align-content: center;
-    padding: 10px;
+    padding: .625em;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
-    grid-column-gap: 20px;
-    grid-row-gap:20px;
+    grid-row-gap:1.25em;  
 }
 
 .blog img{
-    width:500px;
+    width:31.25em;
+    margin: auto;
+}
+
+/* the above two tags are different. i=one is a class 'blog-img' while the other is targeting the images in the class 'blog'.*/
+
+.blog-link {
+    position: relative;
+    text-align: center;
+
+}
+.blog-link h3 {
+    position: absolute;
+    bottom: 0;
+    right: 15%;
 }
 
 footer {
     color: var(--light-blue-color);
     background-color: var(--dark-blue-color);
     justify-content: center;
-    padding-top: 10px;
+    padding-top: .625em;
     padding-left: 0;
     display:flex;
 }
@@ -188,35 +213,44 @@ footer {
   color: var(--dark-blue-color);
   text-align: center;
   background-color: var(--purple-blue-color);
-  border: 1px solid var(--light-blue-color);
-  border-radius: 8px;
-  padding: 15px;
-  margin: 25px;
+  border: .0625em solid var(--light-blue-color);
+  border-radius: .5em;
+  padding: .9375em;
+  margin: 1.5625em;
+  box-shadow: 0 .25em .5em 0 var(--dark-blue-color), 0 .375em 1.25em 0 var(--dark-blue-color);
+  margin-bottom: 1.25em;
 }
 
 .info{
     display: flex;
     flex-direction:row;
-    padding: 25px; 
+    padding: 1.5625em; 
 }
 
 .info img{
-    width: 500px;
+    width: 31.25em;
 }
 .info p{
     color:  var(--dark-blue-color);
     text-align: justify;
-    font-size: 25px;
-    padding: 25px;
+    font-size: 1.5625em;
+    padding: 1.562em;
     margin: 0;
 }
+.about .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .about {
     background-color: var(--purple-blue-color);
 }
+
 .about h2{
     margin: 0;
     padding-bottom: 0;
-    padding-top: 75px;
+    padding-top: 4.6875em;
 }
 
 .products{
@@ -228,73 +262,68 @@ footer {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--dark-blue-color);
-    padding: 25px;
+    padding: 1.5625em;
     background-color: var(--light-blue-color);
-    margin: 25px;
+    margin: 1.5625em;
+    padding: 2em;
 }
 
+.glasses h3{
+    color: var(--dark-blue-color);
+    margin: .625rem;
+    padding: 0;
+
+}
+.glasses p{
+    margin: 20px;
+} 
 .glasses img{
-    width: 300px;
+    width: 18.75em;
+    box-shadow: .1875em .1875em .1875em .1875em  var(--dark-blue-color);
 }
 
 /* tablet layout*/
 
-@media all and (max-width:80rem) {
+@media all and (max-width:80em) {
   
     h1, h2 { 
-        font-size: 1.5625rem;
+        font-size: 1.5625em;
     }
 
-    header{
-        height: 8vh; 
-   }
+   
    .logo{
-    margin: 0;
-    padding: 10px;
-    width: 85px;
+        margin: 0;
+        padding: .625em;
+        width: 5.3125em;
    }
 
     .hero {    
-        min-height: 400px;
-        margin-top: 20px;
+        min-height: 25em;
+        margin-top: 1.25em;
     }
 
 
     .hero h1{
-        font-size: 80px;   
+        font-size: 5em;   
     }
     
     .intro{
-        padding: 25px;
+        padding: 1.5625em;
     }
     
 
-    .gal-img{
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        grid-template-rows: auto auto;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-auto-columns: 1fr;
-        margin-top: 0;
-        padding-top: 0;
-        padding-bottom: 50px;
-        display: grid;
+    .gal-img{ 
+        grid-template-columns: 1fr 1fr 1fr;    
     }
     
     
     .gal-img img{
-        height: 300px;
+        height: 18.75em;
     }
     
     .blog img{
         width:400px;
     }
-    
-    .info img{
-        width: 400px;
-        height: auto;
-    }
-  
     
     .products{
         display: grid;
@@ -302,11 +331,11 @@ footer {
     }
     
     .glasses{
-        margin:15px
+        margin:.9375em;
     }
     
     .glasses img{
-        width: 200px;
+        width: 12.5em;
     }
 }
 
@@ -314,53 +343,54 @@ footer {
 
 @media all and (max-width:48rem) {
     h1, h2 { 
-        font-size: 2rem;
+        font-size: 2em;
+    }
+    
+    h3{
+        font-size: 1em;
+        padding: .625em;
+        text-align: center;
     }
 
-   header{
-        height: 5.8vh;
-    }
+   
     .logo{
-        width: 50px;
+        width: 3.125em;
     }
 
-    .nav{display: none;}
-
-   .openslide{
-      display: block;
-      right: 0;
-      top: 0;
-
+    .nav{
+        display: none;
     }
 
-    .side-menu{
+    #menu-toggle {
         display: inline;
-        width: 0px;
-        height: 100%;
-        background-color:var(--light-blue-color);
-        transition: .3s all ease;
-        position: fixed;
-        top: 0;
-        right: 0;
-        overflow: hidden;
-        z-index: 50;
-        font-size: 2.1875rem;
-        padding-bottom: .625rem;
+    }
+
+    #menu {
+        display: none;
+        position: absolute;
+        flex-direction: column;
+        right: 1.25em;
+        background-color: var(--dark-color);
+        padding: .625em;
+        background-color: var(--dark-blue-color);
     }
 
 
     .hero {    
-        min-height: 300px;
-        margin-top: 20px;
+        min-height: 18.75em;
+        margin-top: 1.25em;
+        background-image: url('../images/blog4.png');
+
     }
 
 
     .hero h1{
-        font-size: 50px;   
+        padding-top: 2.1875em;
+        font-size: 3.125em;   
     }
     
     .intro{
-        padding: 15px;
+        padding: .9375em;
     }
     .home-shop-items{
         flex-direction: column;
@@ -368,40 +398,43 @@ footer {
     
     .gal-img{
       grid-template-columns: 1fr 1fr;
-      padding-bottom: 10px;
-      display: grid;
+      padding-bottom: .625em;
     }
     
     
     .gal-img img{
-        height: 200px;
+        height: 12.5em;
     }
     
     .blog-img{
         grid-template-columns: 1fr;
-        align-items: center;
-        align-content: center;
-        padding-right:0 ;
+    }
+
+    .blog-link h3 {
+        position: absolute;
+        bottom: -5%;
+        left: 13%;
     }
 
     .blog img{
-        width:300px;
+        width:18.75em;
     }
 
     .info{
         display: flex;
         flex-direction:column;
-        padding: 25px; 
+        padding: 1.5625em; 
         margin: 0;
         align-items: center;
         
     }
     
     .info img{
-        width: 200px;
+        display: none;
     }
+
     .info p{
-        font-size: 15px;
+        font-size: .9375em;
     }
     
     .products{
